Рефакторинг. LikeServiceInterface